--- a/convert_rgb_to_grayscale.html
+++ b/convert_rgb_to_grayscale.html
@@ -70,14 +70,14 @@ color_img = np.asarray(Image.open(img_filename)) / 255</code></pre>
         </p>
         <p style="text-align:center;">
           <img title="Three dimensional image array structure"
-            src="images/image_processing/three_d_array.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/three_d_array.png"
             alt="Three dimensional image array structure"
             style="height: 320px;">
         </p>
 
         <p style="text-align:center;">
         <img title="Color image with red, green, and blue channels"
-          src="images/image_processing/reign_pic_breakdown.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/reign_pic_breakdown.png"
           alt="Color image with red, green, and blue channels"
           style="height: 380px;">
           Image credit: Diane Rohrer
@@ -103,7 +103,7 @@ color_img = np.asarray(Image.open(img_filename)) / 255</code></pre>
 
         <p style="text-align:center;">
         <img title="Gray from averaging red, green, and blue channels"
-          src="images/image_processing/gray_mean.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/gray_mean.png"
           alt="Gray from averaging red, green, and blue channels"
           style="height: 320px;">
         </p>
@@ -120,7 +120,7 @@ color_img = np.asarray(Image.open(img_filename)) / 255</code></pre>
         <p style="text-align:center;">
         <a href="https://en.wikipedia.org/wiki/Grayscale#Colorimetric_(perceptual_luminance-preserving)_conversion_to_grayscale">
         <img title="Equation for combinging red, green, and blue channels"
-          src="images/image_processing/rgb2gray_eq_linear.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/rgb2gray_eq_linear.png"
           alt="Equation for combining red, green, and blue channels"
           style="height: 50px;">
         </a>
@@ -131,7 +131,7 @@ color_img = np.asarray(Image.open(img_filename)) / 255</code></pre>
 
         <p style="text-align:center;">
         <img title="Gray from weighted averaging red, green, and blue channels"
-          src="images/image_processing/gray_lin.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/gray_lin.png"
           alt="Gray from weighted averaging red, green, and blue channels"
           style="height: 500px;">
         </p>
@@ -155,14 +155,14 @@ color_img = np.asarray(Image.open(img_filename)) / 255</code></pre>
         <p style="text-align:center;">
         <a href="https://en.wikipedia.org/wiki/Grayscale#Colorimetric_(perceptual_luminance-preserving)_conversion_to_grayscale">
         <img title="Nonlinear transformation of gamma"
-          src="images/image_processing/gamma_compression_eq.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/gamma_compression_eq.png"
           alt="Nonlinear transformation of gamma"
           style="height: 130px;">
         </a>
         </p>
         <p style="text-align:center;">
         <img title="Gamma compression function"
-          src="images/image_processing/gamma_fcn.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/gamma_fcn.png"
           alt="Gamma compression function"
           style="height: 350px;">
         </p>
@@ -177,7 +177,7 @@ color_img = np.asarray(Image.open(img_filename)) / 255</code></pre>
 
         <p style="text-align:center;">
         <img title="Gray accounting for gamma compression"
-          src="images/image_processing/gray_nl.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/gray_nl.png"
           alt="Gray accounting for gamma compression"
           style="height: 500px;">
         </p>
@@ -200,7 +200,7 @@ color_img = np.asarray(Image.open(img_filename)) / 255</code></pre>
 
         <p style="text-align:center;">
         <img title="Equation for combinging red, green, and blue channels"
-          src="images/image_processing/rgb2gray_eq_approx.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/rgb2gray_eq_approx.png"
           alt="Equation for combining red, green, and blue channels"
           style="height: 40px;">
         </p>
@@ -213,7 +213,7 @@ color_img = np.asarray(Image.open(img_filename)) / 255</code></pre>
           
         <p style="text-align:center;">
         <img title="Linear approximation of gray accounting for gamma compression"
-          src="images/image_processing/gray_approx.png"
+          src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/gray_approx.png"
           alt="Linear approximation of gray accounting for gamma compression"
           style="height: 500px;">
         </p>
