--- a/images_to_numbers.html
+++ b/images_to_numbers.html
@@ -39,7 +39,7 @@
         </p>
         <p style="text-align:center;">
           <img title="Image quantification montage"
-            src="images/image_processing/rgb_title_image.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/rgb_title_image.png"
             alt="Image quantification montage"
             style="height: 300px;">
         </p>
@@ -92,7 +92,7 @@
         </p>
         <p style="text-align:center;">
           <img title="A pixel composed of red, green, and blue LEDs"
-            src="images/image_processing/rgb_pixel.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/rgb_pixel.png"
             alt="A pixel composed of red, green, and blue LEDs"
             style="height: 200px;">
         </p>
@@ -132,7 +132,7 @@
         </p>
         <p style="text-align:center;">
           <img title="An array of pixels composed of red, green, and blue LEDs"
-            src="images/image_processing/rgb_pixel_array.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/rgb_pixel_array.png"
             alt="An array of pixels composed of red, green, and blue LEDs"
             style="height: 300px;">
         </p>
@@ -150,7 +150,7 @@
         </p>
         <p style="text-align:center;">
           <img title="Hex codes of a few colors"
-            src="images/image_processing/color_hex.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/color_hex.png"
             alt="Hex codes of a few colors"
             style="height: 400px;">
         </p>
@@ -171,7 +171,7 @@
         </p>
         <p style="text-align:center;">
           <img title="Progressive zoom showing pixels in an image"
-            src="images/image_processing/zoom_pixels.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/zoom_pixels.png"
             alt="Progressive zoom showing pixels in an image"
             style="height: 160px;">
           Image credit: Diane Rohrer
@@ -186,7 +186,7 @@
 
         <p style="text-align:center;">
           <img title="Arrays of pixel colors broken down into red, green, and blue"
-            src="images/image_processing/rgb_arrays.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/rgb_arrays.png"
             alt="Arrays of pixel colors broken down into red, green, and blue"
             style="height: 600px;">
         </p>
@@ -239,7 +239,7 @@ img = np.asarray(Image.open("image_filename.jpg"))</code></pre>
         </p>
         <p style="text-align:center;">
           <img title="Three dimensional image array structure"
-            src="images/image_processing/three_d_array.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/image_processing/three_d_array.png"
             alt="Three dimensional image array structure"
             style="height: 400px;">
         </p>
