--- a/evopowell.html
+++ b/evopowell.html
@@ -63,7 +63,7 @@
         <p style="text-align:center;">
           <img
             alt="Two dimensional sinc function"
-            src="images/evopowell/two_d_sinc.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/evopowell/two_d_sinc.png"
             style="height: 200px;">
         </p>
         <p>
@@ -177,7 +177,7 @@
         <p style="text-align:center;">
           <img
             alt="Two random points selected and evaluated"
-            src="images/evopowell/f_10007.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/evopowell/f_10007.png"
             style="height: 350px;">
         </p>
         <p>
@@ -237,7 +237,7 @@
         <p style="text-align:center;">
           <img
             alt="Child points selected for first parent"
-            src="images/evopowell/f_10016.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/evopowell/f_10016.png"
             style="height: 350px;">
         </p>
         <p>
@@ -292,7 +292,7 @@
         <p style="text-align:center;">
           <img
             alt="Results after second iteration"
-            src="images/evopowell/f_10021.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/evopowell/f_10021.png"
             style="height: 350px;">
         </p>
         <p>
@@ -303,7 +303,7 @@
         <p style="text-align:center;">
           <img
             alt="Results after third iteration"
-            src="images/evopowell/f_10032.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/evopowell/f_10032.png"
             style="height: 350px;">
         </p>
         <p>
@@ -314,7 +314,7 @@
         <p style="text-align:center;">
           <img
             alt="Results after a few more iterations"
-            src="images/evopowell/f_10071.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/evopowell/f_10071.png"
             style="height: 350px;">
         </p>
         <p>
@@ -325,7 +325,7 @@
         <p style="text-align:center;">
           <img
             alt="Results after a few more iterations"
-            src="images/evopowell/f_10123.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/evopowell/f_10123.png"
             style="height: 350px;">
         </p>
         <p>
@@ -338,7 +338,7 @@
         <p style="text-align:center;">
           <img
             alt="Results after a few more iterations"
-            src="images/evopowell/f_10211.png"
+            src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/evopowell/f_10211.png"
             style="height: 350px;">
         </p>
         <p>
